--- a/admin.html
+++ b/admin.html
@@ -10,11 +10,9 @@
         .admin-card { background: #080808; padding: 30px; border-radius: 20px; border: 1px solid #1a1a1a; margin-bottom: 30px; }
         .form-group input, .form-group select { width: 100%; padding: 12px; margin-bottom: 15px; background: #121212; border: 1px solid #333; color: white; border-radius: 10px; }
         .btn-add { width: 100%; padding: 15px; background: #0071e3; color: white; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; }
-        .btn-cancel { background: #555; margin-top: 10px; display: none; }
         .prod-list { margin-top: 20px; border-top: 1px solid #222; }
         .prod-item { display: flex; justify-content: space-between; padding: 15px 0; border-bottom: 1px solid #111; align-items: center; }
-        .actions { display: flex; gap: 10px; }
-        .btn-del { background: #ff3b30; color: white; border: none; padding: 8px 12px; border-radius: 8px; cursor: pointer; }
+        .btn-del { background: #ff3b30; color: white; border: none; padding: 8px 12px; border-radius: 8px; cursor: pointer; margin-left: 5px; }
         .btn-edit { background: #34c759; color: white; border: none; padding: 8px 12px; border-radius: 8px; cursor: pointer; }
     </style>
 </head>
@@ -34,7 +32,7 @@
             </div>
             <div class="form-group"><input type="text" id="pImagen" placeholder="URL de la imagen"></div>
             <button class="btn-add" id="btn-save" onclick="guardar()">Publicar Producto</button>
-            <button class="btn-add btn-cancel" id="btn-cancel" onclick="cancelarEdicion()">Cancelar Edición</button>
+            <button class="btn-add" id="btn-cancel" onclick="resetForm()" style="display:none; background:#444; margin-top:10px;">Cancelar Edición</button>
         </div>
 
         <div class="admin-card">
@@ -58,15 +56,21 @@
 
             if(!n || !p || !i) return alert("Completa los datos");
 
-            const data = { nombre: n, precio: p, categoria: c, imagen: i, fecha: firebase.firestore.FieldValue.serverTimestamp() };
+            const data = {
+                nombre: n, 
+                precio: p, 
+                categoria: c, 
+                imagen: i, 
+                fecha: firebase.firestore.FieldValue.serverTimestamp()
+            };
 
             if(editId) {
                 db.collection("productos").doc(editId).update(data)
-                    .then(() => { alert("Producto actualizado"); cancelarEdicion(); })
+                    .then(() => { alert("Producto actualizado"); resetForm(); })
                     .catch(err => alert("Error: " + err.message));
             } else {
                 db.collection("productos").add(data)
-                    .then(() => { alert("Producto subido"); location.reload(); })
+                    .then(() => { alert("Producto subido"); resetForm(); })
                     .catch(err => alert("Error: " + err.message));
             }
         }
@@ -77,12 +81,13 @@
             document.getElementById('pPrecio').value = precio;
             document.getElementById('pCategoria').value = cat;
             document.getElementById('pImagen').value = img;
+            
             document.getElementById('form-title').innerText = "Editando Producto";
             document.getElementById('btn-save').innerText = "Guardar Cambios";
             document.getElementById('btn-cancel').style.display = "block";
         }
 
-        function cancelarEdicion() {
+        function resetForm() {
             editId = null;
             location.reload();
         }
@@ -95,7 +100,7 @@
                 div.innerHTML += `
                     <div class="prod-item">
                         <span>${prod.nombre} - $${prod.precio}</span>
-                        <div class="actions">
+                        <div>
                             <button class="btn-edit" onclick="prepararEdicion('${doc.id}', '${prod.nombre}', '${prod.precio}', '${prod.categoria}', '${prod.imagen}')">Editar</button>
                             <button class="btn-del" onclick="borrar('${doc.id}')">Eliminar</button>
                         </div>
